--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <title>Nina Belikova</title>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
   <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-  <script src="stuff.js"></script>
-  <link rel="stylesheet" href="animate.css">
-  <link rel="stylesheet" href="style.css">
+  <script src="js/stuff.js"></script>
+  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body ng-app="app" ng-controller="PotatoControl">
@@ -16,7 +16,7 @@
   </div>
 
   <div id="food">
-    <img id="potato" src="potato.png">
+    <img id="potato" src="assets/potato.png">
 
     <div id="question">
       <p>Do you like potatoes?</p>
