--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
 <head>
   <meta charset="utf-8">
   <title>Nina Belikova</title>
@@ -10,23 +10,33 @@
 </head>
 
 <body ng-app="app" ng-controller="PotatoControl">
+
+
+   <!--       Navbar        -->
+
   <div id="navbar">
     <a href="http://blog.ninabelikova.com">blog</a>
     <a href="#">contact</a>
   </div>
 
-  <div id="food">
-    <img id="potato" src="assets/potato.png">
 
-    <div id="question">
+  <!--      Brick: Food     -->
+
+  <div id="food" class="brick">
+    <img id="food-potato" src="assets/potato.png">
+
+    <div id="food-question">
       <p>Do you like potatoes?</p>
       <button class="animated" ng-class="{tada:oui}" ng-click="yesTada()">yes</button>
       <button class="animated" ng-class="{tada:nan}" ng-click="noTada()">go to hell</button>
     </div>
   </div>
 
-  <div id="block">
-    <div id="intro" ng-init="language = 1">
+
+  <!--    Brick: Introduction   -->
+
+  <div id="introduction" class="brick">
+    <div id="intro-name" ng-init="language = 1">
       <h1 ng-show="language === 1">Hello, I'm Nina Belikova.</h1>
       <h1 ng-show="language === 2">哈囉，我叫詹惟惟！</h1>
       <h1 ng-show="language === 3">Bonjour, je m'appelle Nina Belikova.</h1>
@@ -37,7 +47,7 @@
       <button ng-click="language = 4">русский</button>
     </div>
 
-    <div id="text">
+    <div id="intro-text">
       <p>
         I like potatoes<span ng-show="potatoFondness">, too</span>.<span ng-show="potatoHatred"> Unlike you.</span>
       </p>
@@ -46,6 +56,44 @@
         And I make websites, teach French/English and offer unsolicited bad advice for a living.
       </p>
     </div>
+  </div>
+
+
+  <!--     Brick: Projects    -->
+
+  <div class="brick" id="projects">
+    <h1>Projects</h1>
+
+    <div class="project-container">
+      <div class="project">
+        <div class="project-image">
+          <img src="assets/screenshot-pomodoro.png" alt="" />
+        </div>
+
+        <div class="project-description">
+          <h3>C'est Un Pomodoro</h3>
+          <p>
+            A multilingual pomodoro with a ringtone full of Pewdiepie's love. Amazing Hakka translation by Ian Lee.
+          </p>
+        </div>
+      </div>
+
+      <div class="project">
+        <div class="project-image">
+          <img src="assets/screenshot-tomato.png" alt="" />
+        </div>
+
+        <div class="project-description">
+          <h3>The Tomato Way</h3>
+          <p>
+            A parallel reading system I've been working on.
+          </p>
+        </div>
+      </div>
+    </div>
+
+
+
   </div>
 </body>
 </html>
