small css fixes

--- a/index.html
+++ b/index.html
@@ -62,12 +62,15 @@
   <!--     Brick: Projects    -->
 
   <div class="brick" id="projects">
-    <h1>Projects</h1>
+    <h1>Websites: Results of Extreme Trollness & Coffee </h1>
+    <h3>
+      Enter at your own peril.
+    </h3>
 
     <div class="project-container">
       <div class="project">
         <div class="project-image">
-          <img src="assets/screenshot-pomodoro.png" alt="" />
+          <a href="https://ninabelikova.github.io/pomodoro/" target="_blank"><img src="assets/screenshot-pomodoro.png" alt="" /></a>
         </div>
 
         <div class="project-description">
