added site map, meta tags and robot.txt

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <head>
-  <meta charset="utf-8">
+  <!-- extremely cool meta stuff coming -->
+  <meta name="title" content="Nina Belikova">
+  <meta name="description" content="Nina's cheeky main website.">
+  <meta name="keywords" content="Nina Belikova,">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="English">
+  <meta name="author" content="Nina Belikova">
+  <!-- Meta out -->
+
   <title>Nina Belikova</title>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
   <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
