fix broken links & add alt to images

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
     })();
   </script>
-  <noscript><p><img src="//nyehhehheh.xyz/piwik/piwik/piwik.php?idsite=2" style="border:0;" alt="" /></p></noscript>
+  <noscript><p><img src="//nyehhehheh.xyz/piwik/piwik/piwik.php?idsite=2" style="border:0;" alt="piwik tracking image" /></p></noscript>
   <!-- End Piwik Code -->
 
 </head>
@@ -49,7 +49,7 @@
   <!--      Brick: Food     -->
 
   <div id="food" class="brick">
-    <img id="food-potato" src="assets/potato.png">
+    <img id="food-potato" src="assets/potato.png" alt="a big clean beautiful image of potatoes">
 
     <div id="food-question">
       <p>Do you like potatoes?</p>
@@ -96,7 +96,7 @@
     <div class="project-container">
       <div class="project">
         <div class="project-image">
-          <a href="https://ninabelikova.github.io/pomodoro/" target="_blank"><img src="assets/screenshot-pomodoro.png" alt="" /></a>
+          <a href="http://ninabelikova.com/pomodoro/" target="_blank"><img src="assets/screenshot-pomodoro.png" alt="A screenshot of my pomodoro web app." /></a>
         </div>
 
         <div class="project-description">
