--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+
   <!-- extremely cool meta stuff coming -->
   <meta name="title" content="Nina Belikova">
   <meta name="description" content="Nina's cheeky main website.">
@@ -11,11 +12,11 @@
   <!-- Meta out -->
 
   <title>Nina Belikova</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
-  <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+  <script src="js/angular.min.js"></script>
   <script src="js/stuff.js"></script>
   <link rel="stylesheet" href="css/animate.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
+
   <!-- Piwik -->
   <script type="text/javascript">
     var _paq = _paq || [];
@@ -41,8 +42,8 @@
    <!--       Navbar        -->
 
   <div id="navbar">
-    <a href="http://blog.ninabelikova.com">blog</a>
-    <a href="#">contact</a>
+    <a href="https://blog.ninabelikova.com">blog</a>
+    <a href="#" ng-click="change_contact()">{{contact_text}}</a>
   </div>
 
 
@@ -64,16 +65,14 @@
   <div id="introduction" class="brick">
     <div id="intro-name" ng-init="language = 1">
       <h1 ng-show="language === 1">Hello, I'm Nina Belikova.</h1>
-      <h1 ng-show="language === 2">哈囉，我叫詹惟惟！</h1>
       <h1 ng-show="language === 3">Bonjour, je m'appelle Nina Belikova.</h1>
       <h1 ng-show="language === 4">Здравствуйте, меня зовут Нина Беликова.</h1>
       <button ng-click="language = 1 ">english</button>
-      <button ng-click="language = 2 ">中文</button>
       <button ng-click="language = 3">français</button>
       <button ng-click="language = 4">русский</button>
     </div>
 
-    <div id="intro-text">
+    <div id="intro-text" class="text">
       <p>
         I like potatoes<span ng-show="potatoFondness">, too</span>.<span ng-show="potatoHatred"> Unlike you.</span>
       </p>
@@ -88,23 +87,45 @@
   <!--     Brick: Projects    -->
 
   <div class="brick" id="projects">
-    <h1>Websites: Results of Extreme Trollness & Coffee </h1>
-    <h3>
-      Enter at your own peril.
-    </h3>
+    <h2>Websites that I'm semi not ashamed to share publicly</h2>
+    <div class="text" id="project-text">
+      <p>
+        Because if you're one of my close friends, you'd know how many troll projects I've coded and am too ashamed to post here.
+        Approximate troll project to actually 1% useful to humanity (or probably just me) project ratio: 37:1.
+      </p>
+      <p>
+        Enter at your own peril.
+      </p>
+    </div>
+
 
     <div class="project-container">
+
       <div class="project">
         <div class="project-image">
-          <a href="http://ninabelikova.com/pomodoro/" target="_blank"><img src="assets/screenshot-pomodoro.png" alt="A screenshot of my pomodoro web app." /></a>
+          <a href="https://ninabelikova.com/pomodoro/" target="_blank"><img src="assets/screenshot-pomodoro.png" alt="A screenshot of my pomodoro web app." /></a>
         </div>
 
         <div class="project-description">
-          <h3>C'est Un Pomodoro</h3>
+          <h4>C'est Un Pomodoro</h4>
           <p>
             A multilingual pomodoro with a ringtone full of Pewdiepie's love. Amazing Hakka translation by Ian Lee.
           </p>
         </div>
+      </div>
+
+      <div class="project">
+        <div class="project-image">
+          <a href="https://toriel.nyehhehheh.xyz" target="_blank"><img src="assets/screenshot-toriel.png" alt="An expertly cropped screenshot of my Toriel hugging service." /></a>
+        </div>
+
+        <div class="project-description">
+          <h4>Unlimited Hugs From Toriel</h4>
+          <p>
+            An Undertale fan site. I made this out of the anger of being forced to leave Toriel alone in the ruins and not getting enough hugs from her. It serves no other purpose than to watch Toriel hugging you over and over again.
+          </p>
+        </div>
+
       </div>
 
 
